--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,6 +3,8 @@ body {
     font-family: "Open Sans", "Montserrat", sans-serif;
     padding: 0;
     margin: 0;
+    cursor: default;
+    -webkit-user-select: none;
 }
 
 h1 {
@@ -61,6 +63,7 @@ i.list-icon {
     width: 100%;
 }
 
+/* Navigation item */
 .nav-item {
     margin-left: 9px;
     margin-top: 3px;
@@ -69,6 +72,7 @@ i.list-icon {
     font-size: 16px;
 }
 
+/* Item to send to end of flexbox */
 .nav-item--push {
     margin-left: auto;
     margin-top: 3px;
@@ -76,15 +80,21 @@ i.list-icon {
     font-weight: normal;
     font-size: 16px;
 }
+
+.cursor-default {
+    cursor: default;
+}
+
 /**** Input ****/
 input.regular {
     height: 6.5%;
     font-size: 14pt;
+    
 }
 
 /* Change cursor on hover */
 input.regular:hover {
-    cursor: text !important;
+    cursor: text;
 }
 
 /* Longer input */
@@ -104,7 +114,18 @@ button {
     padding-top: 5px;
     padding-bottom: 5px;
     z-index: inherit;
-    cursor: pointer !important;
+}
+
+/* Select class for boxes */
+.selectable:hover {
+    cursor: pointer;
+    box-shadow:inset 0 0 0 99999px rgba(0,0,0,0.15);
+}
+
+/* Select class for text */
+.selectable--text:hover {
+    cursor: pointer;
+    color: #d8d8d8;
 }
 
 /**** Colour related ****/
