--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -113,6 +113,10 @@ input.long {
     width: 30%;
 }
 
+input.short {
+    width: 150px;
+}
+
 /* Label */
 .input-label {
     min-width: 35%;
@@ -152,7 +156,7 @@ button {
 }
 
 .red {
-    background-color: #DC2D27;
+    background-color: #e53833;
 }
 
 .dark-grey {
@@ -160,7 +164,7 @@ button {
 }
 
 .yellow--text {
-    color: #FFEC00;
+    color: #fbf06a;
 }
 
 .black {
@@ -190,8 +194,49 @@ button {
     text-align: center;
 }
 
-/**** Flexbox ****/
+/**** Modal ****/
+/* The general modal backdrop styling, position, etc */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: calc(100vh - 5.5vh);
+    overflow: auto; 
+    /*background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);*/
+}
 
+/* Blur background style */
+.blur {
+    -webkit-filter: opacity(0.2) blur(8px);
+    filter: opacity(0.2) blur(8px);
+    height: 100vh;
+    width: 100%;
+}
+
+/* Perfect centre */
+.centred-settings {
+    position: fixed;
+    bottom: 50%;
+    right: 50%;
+    margin-bottom: -205px;
+    margin-right: -255px;
+}
+
+/* The modal */
+.modal--settings {    
+    width: 510px;
+    height: 360px;
+    border: solid #707070;
+    border-width: 1px;
+    border-radius: 3px;
+    padding: 15px;
+}
+
+/**** Flexbox ****/
 /* Row */
 div.flexbox-row {
     display: flex;
@@ -267,6 +312,12 @@ div.flexbox-column--align {
 .margin-tb--13px {
     margin-top: 13px;
     margin-bottom: 13px;
+}
+
+/* Top/bottom 16px margin */
+.margin-tb--16px {
+    margin-top: 16px;
+    margin-bottom: 16px;
 }
 
 /* Bottom 10px margin */
