--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -5,6 +5,7 @@ body {
     margin: 0;
     cursor: default;
     -webkit-user-select: none;
+    overflow-y: hidden;
 }
 
 h1 {
@@ -15,7 +16,7 @@ h1 {
 
 h2 {
     font-family: "Montserrat", sans-serif;
-    font-size: 18pt;
+    font-size: 20pt;
     font-weight: 900;
 }
 
@@ -95,16 +96,16 @@ i.lock {
     margin-top: 3px;
     margin-bottom: 3px;
     font-weight: normal;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 /* Item to send to end of flexbox */
 .nav-item--push {
     margin-left: auto;
-    margin-top: 3px;
-    margin-bottom: 3px;
+    margin-top: 5px;
+    margin-bottom: 8px;
     font-weight: normal;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 /* Default cursor */
@@ -248,8 +249,8 @@ button {
     background-color: #eaebec;
 }
 
-.red {
-    background-color: #e53833;
+.orange {
+    background-color: #ff6600;
 }
 
 .dark-grey {
@@ -269,8 +270,8 @@ button {
 }
 
 /**** Text colours ****/
-.yellow--text {
-    color: #fbf06a;
+.orange--text {
+    color: #fd8d0e;
 }
 
 
@@ -307,7 +308,7 @@ button {
 .modal {
     display: none;
     position: fixed;
-    z-index: 4;
+    z-index: 10;
     bottom: 0;
     right: 0;
     width: 100%;
@@ -471,7 +472,7 @@ div.flexbox-column--align {
 
 /* Scroll vertically */
 div.vertical-scroll {
-    overflow-y: auto;
+    overflow-y: auto !important;
 }
 
 /**** Padding & margin ****/
